# mcp-finnhub

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
.gemini/: settings.json
.gemini_security/: SECURITY_ANALYSIS_TODO.md
mcp_finnhub/: server.py
scripts/: setup_check.py  validate_api.py  verify_mcp.py
tests/: test_server.py
